# dataStrutures

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  asd.txt  testgtest.cpp
.github/workflows/: cmake.yml
inc/: CollapsedTrie.hh  Trie.hh
src/: main.cpp
